# chatbot-widget

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  manage.py  pyproject.toml  railway.json
backend/apps/agent/: graph.py  llm.py  observability.py  prompts.py  state.py
backend/apps/agent/nodes/: generate.py  retrieve.py
backend/apps/chat/: admin.py  models.py  urls.py  views.py
backend/apps/chat/management/commands/: purge_conversations.py
backend/apps/knowledge/: admin.py  apps.py  checks.py  embeddings.py  ingest.py  models.py  retrieval.py
backend/apps/knowledge/migrations/: 0001_pgvector.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
config/: customer.example.yaml
widget/src/: embed.js
