[project]
name = "chatbot-widget-backend"
version = "0.1.0"
description = "Customer-agnostic website chatbot: Django + LangGraph + Langfuse"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "dj-database-url>=2.2",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langfuse>=2.50,<3",
    "uvicorn>=0.30",
    "whitenoise>=6.7",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.ruff]
line-length = 100
